--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
+
 }
 
 /* set uniform font */
@@ -57,29 +57,48 @@ body{
 }
 
 .card-signin {
+  background: #f9f9f9;
+
   border: 0;
   border-radius: 1rem;
-  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.5rem 1rem 1rem rgba(0, 0, 0, 0.1);
+
 }
 .form-signin {
   width: 100%;
 }
 
 .form-signin .btn {
+
   font-size: 80%;
   border-radius: 5rem;
   letter-spacing: .1rem;
   font-weight: bold;
   padding: 1rem;
   transition: all 0.2s;
+  
 }
 
 .form-label-group {
   position: relative;
   margin-bottom: 1rem;
+
 }
 
 .form-label-group input {
   height: auto;
   border-radius: 2rem;
+
+}
+
+.tab-active{
+  background:#fff;
+  border-bottom: red 3px solid;
+}
+
+.tabs:hover{
+  background:#f3f3f3;
+}
+.hide-display{
+  display: none;
 }
